# hasher-rs

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/hashers/: mod.rs
src/hashers/blake2/: mod.rs  test.rs
src/hashers/crc/: mod.rs  test.rs
src/hashers/md5/: mod.rs  test.rs
src/hashers/sha1/: mod.rs  test.rs
src/hashers/sha2/: mod.rs  test.rs
