[package]
name = "hasher"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0.6", features = ["derive"]}
rayon = "1.5.1"
crc32fast = "1.3.0"
md-5 = "0.10.0"
sha-1 = "0.10.0"
sha2 = "0.10.1"
blake2 = "0.10.2"
